--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 <body>
     <table border="1">
 	    <tr>
+	    	<td>หน้าแรก</td>
+	    </tr>
+	    <tr>
+	    	<td>หน้าสอง</td>
+	    </tr>
+	    <tr>
+	    	<td>หน้าสาม</td>
+	    </tr>
+	    <tr>
 	    	<td>1</td>
-	    </tr>
-	    <tr>
-	    	<td></td>
-	    </tr>
-	    <tr>
-	    	<td></td>
-	    </tr>
-	    <tr>
-	    	<td></td>
 	    </tr>
 	    <tr>
 	    	<td></td>
